--- a/res/layout/hong_login_personinfo.xml
+++ b/res/layout/hong_login_personinfo.xml
@@ -4,33 +4,7 @@
     android:background="#33CCFF"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/register_linerlayout_title"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:background="#33CCFF" >
-
-        <Button
-            android:id="@+id/register_button_back"
-            android:layout_width="33dp"
-            android:layout_height="38dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/hong_register_button_back_w" />
-
-        <TextView
-            android:id="@+id/register_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="#33CCFF"
-            android:gravity="center"
-            android:text="用户信息"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#FFFFFF"
-            android:textSize="20dip" />
-    </RelativeLayout>
+    <include layout="@layout/hong_navigation_bar" />
 
     <RelativeLayout
         android:id="@+id/person_info"
