--- a/res/layout/hong_register.xml
+++ b/res/layout/hong_register.xml
@@ -4,46 +4,21 @@
     android:background="#ffffff"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/register_linerlayout_title"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:background="#33CCFF">
-
-        <Button
-            android:id="@+id/register_button_back"
-            android:layout_width="33dp"
-            android:layout_height="38dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/hong_register_button_back_w" />
-
-        <TextView
-            android:id="@+id/register_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="#33CCFF"
-            android:gravity="center"
-            android:text="用户注册"
-            android:textColor="#FFFFFF" 
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="20dip" />
-    </RelativeLayout>
+     <include layout="@layout/hong_navigation_bar" />
 
     <EditText
         android:id="@+id/register_phonenumber"
         android:layout_width="280dp"
         android:layout_height="40dp"
-        android:layout_below="@id/register_linerlayout_title"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="1dip"
-        android:layout_marginTop="50dip"
+        android:layout_marginTop="150dip"
         android:background="#cccccc"
         android:gravity="left|center"
         android:hint="手机号码"
+        android:maxLines="1"
         android:phoneNumber="true"
+        android:singleLine="true"
         android:textColorHint="#ffffff" />
 
     <EditText
@@ -56,8 +31,10 @@
         android:background="#cccccc"
         android:gravity="left|center"
         android:hint="密码"
+        android:maxLines="1"
         android:password="true"
         android:scrollHorizontally="true"
+        android:singleLine="true"
         android:textColorHint="#ffffff" />
 
     <EditText
@@ -70,8 +47,10 @@
         android:background="#cccccc"
         android:gravity="left|center"
         android:hint="再次输入密码"
+        android:maxLines="1"
         android:password="true"
         android:scrollHorizontally="true"
+        android:singleLine="true"
         android:textColorHint="#ffffff" />
 
     <Button
@@ -82,9 +61,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dip"
         android:background="#33CCFF"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:gravity="center"
         android:text="注册"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFFFFF" />
 
 </RelativeLayout>
